<?xml version="1.0"?>
<package format="3">
  <name>demo_package</name>
  <version>0.0.1</version>
  <description>Een eenvoudig ROS2 voorbeeldpackage</description>
  <maintainer email="student@example.com">Student</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

