<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>kul_drift_finder</name>
  <version>0.0.0</version>
  <description>Tool to measure yaw drift between /amcl_pose and /odom_combined</description>/description>
  <maintainer email="wout.welvaarts@gmail.com">wheeltec</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>tf_transformations</depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>


